static/ChemInput.css
body {
    background-color: lavender;
}

/*For you the reader of my code (bonjour Mr Trak),
Why not make a js for this? 
Don't forget about your tasks on heroku and float point :) */
.col-1_24 {width: 4.17%;}
.col-11_96 {width: 11.46%;}
.col-1_8 {width: 12.5%;}
.col-7_8 {width: 87.5%;}

.col-1 {width: 8.33%;}
.col-2 {width: 16.66%;}
.col-3 {width: 25%;}
.col-4 {width: 33.33%;}
.col-5 {width: 41.66%;}
.col-6 {width: 50%;}
.col-7 {width: 58.33%;}
.col-8 {width: 66.66%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33%;}
.col-11 {width: 91.66%;}
.col-12 {width: 100%;}

[class*="col-"] {
    float: left;
    padding: 8px;
}

.row {
    display: flex;
    margin-top: 2.5px;
    margin-bottom: 2px;
    padding-left: 2.5px;
}

#input {
    height: 32px;
    width: 100%;
    background-color: white;
}

#enter {
    border-radius: 25px;
    height: 32px;
    background-color: aquamarine;
    width: 100%;
}

#enter:hover {
    animation: rainbow 3s linear 0s infinite;
}

@keyframes rainbow {
    from {
        background-color: rgb(127, 255, 212);
    }
    16.6% {
        background-color: rgb(0, 255, 255);
    }
    33.3% {
        background-color: rgb(0, 255, 0);
    }
    50% {
        background-color: rgb(255, 255, 0);
    }
    66.6% {
        background-color: rgb(255, 0, 0);
    }
    83.3% {
        background-color: rgb(255, 0, 255);
    }
    to {
        background-color: rgb(127, 255, 212);
    }
}

#buttons button {
    border-radius: 5px;
    background-color: burlywood;
    margin: 0.5em 0.25em 1em 0.5em;
}

#buttons button:hover {
    opacity: 0.8;
}

.status {
    overflow: hidden;
    color: white;
    text-shadow: 1px 1px #888888;
    text-align: center;
    background-color: #B43;
    border-bottom: 1px dashed gray;
    transition: background-color 0.25s;
}

.status.selected {
    background-color: #00B540;
}

.status:hover {
    opacity: 0.8;
}

.tooltip {
    text-align: center;
    color: white;
    background-color: darkgrey;
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.5s;
}

.status:hover .tooltip {
    visibility: visible;
    opacity: 1;
}

#mode, #infos {
    position: relative;
    height: 512px;
    overflow: hidden;
    float: left;
}

.panel {
	position: absolute;
    height: 100%;
    width: 100%;
    display: none;
}

#info-this {
    background-color: ghostwhite;
}

#info-this h1 {
    font-size: 32px;
    font-family: cursive;
    text-align: center;
    text-shadow: 2px 2px darkslateblue;
}

#info-this h3 {
    font-size: 16px;
    font-family: Book Antiqua;
    text-align: center;
}

#info-this #authors {
    font-family: monospace;
    text-align: center;
}

#info-this #icon {
    display: block;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
}

#info-this #yellow {
    color: yellow;
}

#info-this #green {
    color: limegreen;
}

#info-this #blue {
    color: cornflowerblue;
}

#info-molecule {
    background-color: #FADBD8;
}

#info-equation {
    background-color: #D6EAF8;
}

#info-empirical {
	background-color: #D4EFDF;
}

#info-alkane {
    background-color: #FCF3CF;
}

#info-equation > table {
    width: 100%;
    height: 100%;
    margin: 2.5px;
}

#info-equation > table, #info-equation > table th, #info-equation > table td {
    border: 1px;
}

#info-equation > table tr {
    background: mintcream;
}

#info-equation > table th {
    width: 15%;
    text-align: justify;
    background-color: azure;
    padding-left: 10px;
    border-radius: 2.5px;
}

#info-equation > table td {
    text-align: center;
}

#info-equation > table .data {
    font-family: courier;
}

#info-equation > table .error {
    color: red;
    font-family: menlo;
}

#info-equation > table .number {
    color: red;
};


/* Tables */

table {
    /* very required ! we have no idea why */
}

.results_display_table {
    border-collapse: collapse;
}

.results_display_table td {
    padding: 10px;
    border: 1px solid gray;
}

.results_display_table td:first-child {
    text-align: right;
    vertical-align: center;
    font-weight: bold;
}

.component {
    display: inline-block;
    text-align: center;
    margin: 4px;
    padding: 4px;
    background: whitesmoke;
    box-shadow: 2px 2px 1px gray;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2)
}

/* precision slider */

.results_display_table td:last-child {
    border-width: 0 0 0 1px;
}

input[type=range].precision {
    -webkit-appearance: none;
    width: 50px;
    background: transparent;
}

input[type=range].precision::-webkit-slider-thumb {
    -webkit-appearance: none;
}

input[type=range].precision:focus {
    outline: none;
}

input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    height: 16px;
    width: 16px;
    background: white;
    border: 1px solid gray;
    border-radius: 20px;
    cursor: pointer;
    margin-top: -7px;
    box-shadow: 1px 1px 1px;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 50px;
  height: 2px;
  cursor: pointer;
  background: gray;
  border-radius: 1.3px;
}

input[type=range]:focus::-webkit-slider-runnable-track {
  background: #367ebd;
}

/* Firefox support ?
input[type=range]::-moz-range-thumb {
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    border: 1px solid #000000;
    height: 36px;
    width: 16px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
}
*/

